--- a/WebContent/example.html
+++ b/WebContent/example.html
@@ -11,9 +11,11 @@
 </head>
 <body>
 
-<input name="text1">
-<button id="add">add</button>
-<ol id="list1"></ol>
+<div id="example">
+	<input name="text1">
+	<button id="add">add</button>
+	<ol id="list1"></ol>
+</div>
 
 </body>
 </html>
