--- a/WebContent/example.html
+++ b/WebContent/example.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Backbone.js sandbox</title>
+	<link rel="stylesheet" href="css/example.css">
 	<script defer src="js/lib/jquery.js"></script>
 	<script defer src="js/lib/underscore.js"></script>
 	<script defer src="js/lib/backbone.js"></script>
@@ -14,7 +15,13 @@
 <div id="example">
 	<input name="text1">
 	<button id="add">add</button>
+	<span id="count"></span>
 	<ol id="list1"></ol>
+
+	<div id="list-item-template" class="template">
+		<span class="text1"></span>
+		<span class="time"></span>
+	</div>
 </div>
 
 </body>
