--- a/WebContent/example.html
+++ b/WebContent/example.html
@@ -18,9 +18,11 @@
 	<span id="count"></span>
 	<ol id="list1"></ol>
 
-	<div id="list-item-template" class="template">
-		<span class="text1"></span>
-		<span class="time"></span>
+	<div id="item-template" class="template">
+		<div class="item-content">
+			<span class="text1"></span>
+			<span class="time"></span>
+		</div>
 	</div>
 </div>
 
