--- a/WebContent/example.html
+++ b/WebContent/example.html
@@ -16,6 +16,10 @@
 	<input name="text1">
 	<button id="add">add</button>
 	<span id="count"></span>
+
+	<ul id="navi">
+		<li><button id="clear">clear</button></li>
+	</ul>
 	<ol id="list1"></ol>
 
 	<div id="item-template" class="template">
