wrap #edit-form

--- a/WebContent/example.html
+++ b/WebContent/example.html
@@ -13,9 +13,11 @@
 <body>
 
 <div id="example">
-	<input name="text1">
-	<button id="add">add</button>
-	<span id="count"></span>
+	<form id="edit-form">
+		<input name="text1">
+		<button type="submit" id="add">add</button>
+		<span id="count"></span>
+	</form>
 
 	<ul id="navi">
 		<li><button id="clear">clear</button></li>
