remove script defer

--- a/WebContent/example.html
+++ b/WebContent/example.html
@@ -4,11 +4,11 @@
 	<meta charset="UTF-8">
 	<title>Backbone.js sandbox</title>
 	<link rel="stylesheet" href="css/example.css">
-	<script defer src="js/lib/jquery.js"></script>
-	<script defer src="js/lib/underscore.js"></script>
-	<script defer src="js/lib/backbone.js"></script>
-	<script defer src="js/lib/backbone.localStorage.js"></script>
-	<script defer src="js/example.js"></script>
+	<script src="js/lib/jquery.js"></script>
+	<script src="js/lib/underscore.js"></script>
+	<script src="js/lib/backbone.js"></script>
+	<script src="js/lib/backbone.localStorage.js"></script>
+	<script src="js/example.js"></script>
 </head>
 <body>
 
