move js/example/example.js

--- a/test/example/test-editor.html
+++ b/test/example/test-editor.html
@@ -14,7 +14,7 @@
 <script src="../../WebContent/js/lib/underscore.js"></script>
 <script src="../../WebContent/js/lib/backbone.js"></script>
 <script src="../../WebContent/js/lib/backbone.localStorage.js"></script>
-<script src="../../WebContent/js/example.js"></script>
+<script src="../../WebContent/js/example/example.js"></script>
 
 <script>
 var editor;
