--- a/WebContent/example.html
+++ b/WebContent/example.html
@@ -8,7 +8,7 @@
 	<script src="js/lib/underscore.js"></script>
 	<script src="js/lib/backbone.js"></script>
 	<script src="js/lib/backbone.localStorage.js"></script>
-	<script src="js/example.js"></script>
+	<script src="js/example/example.js"></script>
 </head>
 <body>
 
