--- a/test/example/test-editor.html
+++ b/test/example/test-editor.html
@@ -34,6 +34,26 @@ test("validate text1 not change", function () {
 	equal(editor.validate({text1: "a"}), "not change");
 	equal(editor.validate({text1: "b"}), undefined);
 });
+
+test("setText1 success", function () {
+	editor.setText1("a");
+
+	equal(editor.get("text1"), "a");
+});
+
+asyncTest("setText1 error", function () {
+	expect(2);
+	editor.set("text1", "a");
+	editor.on("invalid", function (model, error) {
+
+		equal(error, "required");
+		start();
+	});
+
+	editor.setText1("");
+
+	equal(editor.get("text1"), "a");
+});
 </script>
 </body>
 </html>
