--- a/test/example/test-editor.html
+++ b/test/example/test-editor.html
@@ -13,6 +13,7 @@
 <script src="../lib/sinon.js"></script>
 <script src="../../WebContent/js/lib/underscore.js"></script>
 <script src="../../WebContent/js/lib/backbone.js"></script>
+<script src="../../WebContent/js/lib/backbone.localstorage.js"></script>
 <script src="../../WebContent/js/example/models.js"></script>
 
 <script>
