refactoring Items#clearAll() to _.each()

--- a/test/example/test-items.html
+++ b/test/example/test-items.html
@@ -18,7 +18,7 @@
 <script src="../../WebContent/js/example/models.js"></script>
 
 <script>
-var editor;
+var items;
 module("Items", {
 	setup: function () {
 		items = new Example.Items();
