refactoring test wrap function

--- a/test/example/test-editor.html
+++ b/test/example/test-editor.html
@@ -17,43 +17,46 @@
 <script src="../../WebContent/js/example/models.js"></script>
 
 <script>
-var editor;
-module("Editor", {
-	setup: function () {
-		editor = new Example.Editor();
-	}
-});
+(function () {
+	var editor;
 
-test("validate text1 required", function () {
-	equal(editor.validate({}), "required");
-	equal(editor.validate({text1: ""}), "required");
-	equal(editor.validate({text1: "a"}), undefined);
-});
+	module("Editor", {
+		setup: function () {
+			editor = new Example.Editor();
+		}
+	});
 
-test("validate text1 not change", function () {
-	editor.set("text1", "a");
+	test("validate text1 required", function () {
+		equal(editor.validate({}), "required");
+		equal(editor.validate({text1: ""}), "required");
+		equal(editor.validate({text1: "a"}), undefined);
+	});
 
-	equal(editor.validate({text1: "a"}), "not change");
-	equal(editor.validate({text1: "b"}), undefined);
-});
+	test("validate text1 not change", function () {
+		editor.set("text1", "a");
 
-test("setText1 success", function () {
-	editor.setText1("a");
+		equal(editor.validate({text1: "a"}), "not change");
+		equal(editor.validate({text1: "b"}), undefined);
+	});
 
-	equal(editor.get("text1"), "a");
-});
+	test("setText1 success", function () {
+		editor.setText1("a");
 
-test("setText1 error", function () {
-	var spy = sinon.spy();
-	editor.set("text1", "a");
-	editor.on("invalid", spy);
+		equal(editor.get("text1"), "a");
+	});
 
-	editor.setText1("");
+	test("setText1 error", function () {
+		var spy = sinon.spy();
+		editor.set("text1", "a");
+		editor.on("invalid", spy);
 
-	ok(spy.calledOnce);
-	equal(spy.getCall(0).args[1], "required");
-	equal(editor.get("text1"), "a");
-});
+		editor.setText1("");
+
+		ok(spy.calledOnce);
+		equal(spy.getCall(0).args[1], "required");
+		equal(editor.get("text1"), "a");
+	});
+})();
 </script>
 </body>
 </html>
