--- a/test/example/index.html
+++ b/test/example/index.html
@@ -4,8 +4,7 @@
 </head>
 <body>
 <ol>
-	<li><a href="test-editor.html?noglobals=true">test-editor.html</a></li>
-	<li><a href="test-items.html?noglobals=true">test-items.html</a></li>
+	<li><a href="test-models.html?noglobals=true">test-models.html</a></li>
 </ol>
 </body>
 </html>
