--- a/test/example/test-models.html
+++ b/test/example/test-models.html
@@ -16,49 +16,9 @@
 <script src="../../WebContent/js/lib/backbone.js"></script>
 <script src="../../WebContent/js/lib/backbone.localstorage.js"></script>
 <script src="../../WebContent/js/example/models.js"></script>
+<script src="../example/test-editor.js"></script>
 
 <script>
-(function () {
-	var editor;
-
-	module("Editor", {
-		setup: function () {
-			editor = new Example.Editor();
-		}
-	});
-
-	test("validate text1 required", function () {
-		equal(editor.validate({}), "required");
-		equal(editor.validate({text1: ""}), "required");
-		equal(editor.validate({text1: "a"}), undefined);
-	});
-
-	test("validate text1 not change", function () {
-		editor.set("text1", "a");
-
-		equal(editor.validate({text1: "a"}), "not change");
-		equal(editor.validate({text1: "b"}), undefined);
-	});
-
-	test("setText1 success", function () {
-		editor.setText1("a");
-
-		equal(editor.get("text1"), "a");
-	});
-
-	test("setText1 error", function () {
-		var spy = sinon.spy();
-		editor.set("text1", "a");
-		editor.on("invalid", spy);
-
-		editor.setText1("");
-
-		ok(spy.calledOnce);
-		equal(spy.getCall(0).args[1], "required");
-		equal(editor.get("text1"), "a");
-	});
-})();
-
 (function () {
 	module("Items", {
 		setup: function () {
