--- a/test/example/test-models.html
+++ b/test/example/test-models.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Editor</title>
+	<title>Models</title>
 	<link rel="stylesheet" href="../lib/qunit.css">
 </head>
 <body>
