--- a/test/example/test-models.html
+++ b/test/example/test-models.html
@@ -10,6 +10,7 @@
 
 	<script src="../lib/qunit.js"></script>
 	<script src="../lib/sinon.js"></script>
+	<script src="../lib/sinon-qunit.js"></script>
 	<script src="../../WebContent/js/lib/jquery.js"></script>
 	<script src="../../WebContent/js/lib/underscore.js"></script>
 	<script src="../../WebContent/js/lib/backbone.js"></script>
