rename views.js <- example.js

--- a/WebContent/example.html
+++ b/WebContent/example.html
@@ -9,7 +9,7 @@
 	<script src="js/lib/backbone.js"></script>
 	<script src="js/lib/backbone.localStorage.js"></script>
 	<script src="js/example/models.js"></script>
-	<script src="js/example/example.js"></script>
+	<script src="js/example/views.js"></script>
 </head>
 <body>
 
