--- a/WebContent/example.html
+++ b/WebContent/example.html
@@ -17,7 +17,8 @@
 	<form id="edit-form">
 		<input name="text1">
 		<button type="submit" id="add">add</button>
-		<span id="count"></span>
+		<div id="error"></div>
+		<div id="count"></div>
 	</form>
 
 	<ul id="navi">
