--- a/test/example/index.html
+++ b/test/example/index.html
@@ -5,6 +5,7 @@
 <body>
 <ol>
 	<li><a href="test-models.html?noglobals=true">test-models.html</a></li>
+	<li><a href="test-integrate.html?noglobals=true">test-integrate.html</a></li>
 </ol>
 </body>
 </html>
