--- a/WebContent/example.html
+++ b/WebContent/example.html
@@ -10,6 +10,7 @@
 	<script src="js/lib/backbone.localStorage.js"></script>
 	<script src="js/example/models.js"></script>
 	<script src="js/example/views.js"></script>
+	<script src="js/example/main.js"></script>
 </head>
 <body>
 
