draft require.js

--- a/WebContent/example.html
+++ b/WebContent/example.html
@@ -4,12 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Backbone.js sandbox</title>
 	<link rel="stylesheet" href="css/example.css">
-	<script src="js/lib/jquery.js"></script>
-	<script src="js/lib/underscore.js"></script>
-	<script src="js/lib/backbone.js"></script>
-	<script src="js/lib/backbone.localStorage.js"></script>
-	<script src="js/example/models.js"></script>
-	<script src="js/example/views.js"></script>
+	<script data-main="js/require.config" src="js/lib/require.js"></script>
 	<script src="js/example/main.js"></script>
 </head>
 <body>
