--- a/test/example/test-integrate.html
+++ b/test/example/test-integrate.html
@@ -32,13 +32,8 @@
 	<script src="../lib/qunit.js"></script>
 	<script src="../lib/sinon.js"></script>
 	<script src="../lib/sinon-qunit.js"></script>
-	<script src="../../WebContent/js/lib/jquery.js"></script>
-	<script src="../../WebContent/js/lib/underscore.js"></script>
-	<script src="../../WebContent/js/lib/backbone.js"></script>
-	<script src="../../WebContent/js/lib/backbone.localstorage.js"></script>
-	<script src="../../WebContent/js/example/models.js"></script>
-	<script src="../../WebContent/js/example/views.js"></script>
 
-	<script src="../example/test-integrate.js"></script>
+	<script data-main="../../WebContent/js/require.config" src="../../WebContent/js/lib/require.js"></script>
+	<script src="test-integrate.js"></script>
 </body>
 </html>
