--- a/test/example/test-models.html
+++ b/test/example/test-models.html
@@ -11,13 +11,9 @@
 	<script src="../lib/qunit.js"></script>
 	<script src="../lib/sinon.js"></script>
 	<script src="../lib/sinon-qunit.js"></script>
-	<script src="../../WebContent/js/lib/jquery.js"></script>
-	<script src="../../WebContent/js/lib/underscore.js"></script>
-	<script src="../../WebContent/js/lib/backbone.js"></script>
-	<script src="../../WebContent/js/lib/backbone.localstorage.js"></script>
-	<script src="../../WebContent/js/example/models.js"></script>
 
-	<script src="../example/test-editor.js"></script>
-	<script src="../example/test-items.js"></script>
+	<script data-main="../../WebContent/js/require.config" src="../../WebContent/js/lib/require.js"></script>
+	<script src="test-editor.js"></script>
+	<script src="test-items.js"></script>
 </body>
 </html>
