--- a/WebContent/example.html
+++ b/WebContent/example.html
@@ -4,8 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Backbone.js sandbox</title>
 	<link rel="stylesheet" href="css/example.css">
-	<script data-main="js/require.config" src="js/lib/require.js"></script>
-	<script src="js/example/main.js"></script>
+	<script data-main="js/example/main" src="js/lib/require.js"></script>
 </head>
 <body>
 
