extract var require = {baseUrl: "js"}

--- a/WebContent/example.html
+++ b/WebContent/example.html
@@ -4,7 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Backbone.js sandbox</title>
 	<link rel="stylesheet" href="css/example.css">
-	<script data-main="js/example/main" src="js/lib/require.js"></script>
+	<script>var require = {baseUrl: "js"}</script>
+	<script data-main="example/main" src="js/lib/require.js"></script>
 </head>
 <body>
 
