--- a/test/example/test-integrate.html
+++ b/test/example/test-integrate.html
@@ -33,13 +33,9 @@
 	<script src="../lib/sinon.js"></script>
 	<script src="../lib/sinon-qunit.js"></script>
 
+	<script>var require = {baseUrl: "../../WebContent/js"}</script>
 	<script src="../../WebContent/js/lib/require.js"></script>
 	<script src="../../WebContent/js/require.config.js"></script>
-	<script>
-		require.config({
-			baseUrl: "../../WebContent/js"
-		});
-	</script>
 	<script src="test-integrate.js"></script>
 </body>
 </html>
