--- a/test/example/test-integrate.html
+++ b/test/example/test-integrate.html
@@ -7,27 +7,19 @@
 </head>
 <body>
 	<div id="qunit"></div>
-	<div id="qunit-fixture">
-		<div id="example">
-			<form id="edit-form">
-				<input name="text1">
-				<button type="submit" id="add">add</button>
-				<div id="error"></div>
-				<div id="count"></div>
-			</form>
+	<div id="qunit-fixture"></div>
 
-			<ul id="navi">
-				<li><button id="clear">clear</button></li>
-			</ul>
-			<ol id="list1"></ol>
-
-			<div id="item-template" class="template">
-				<div class="item-content">
-					<span class="text1"></span>
-				</div>
-			</div>
-		</div>
-	</div>
+	<script src="../../WebContent/js/lib/jquery.js"></script>
+	<script>
+		$.ajax({
+			url: "../../WebContent/example.html",
+			async: false,
+			success: function (responseText) {
+				$("#qunit-fixture").append(
+						$("<div>").html(responseText).find("#example"));
+			}
+		});
+	</script>
 
 	<script src="../lib/qunit.js"></script>
 	<script src="../lib/sinon.js"></script>
