--- a/test/example/test-all.html
+++ b/test/example/test-all.html
@@ -13,7 +13,7 @@
 	<script src="../lib/qunit-composite.js"></script>
 
 	<script>
-		QUnit.testSuites( "All tests", [
+		QUnit.testSuites([
 			"test-models.html",
 			"test-integrate.html"
 		]);
