--- a/test/example/test-integrate.html
+++ b/test/example/test-integrate.html
@@ -16,6 +16,7 @@
 	<script>var require = {baseUrl: "../../WebContent/js"}</script>
 	<script src="../../WebContent/js/lib/require.js"></script>
 	<script src="../../WebContent/js/require.config.js"></script>
+	<script src="../require.config.js"></script>
 	<script src="test-integrate.js"></script>
 </body>
 </html>
