--- a/test/example/test-integrate.html
+++ b/test/example/test-integrate.html
@@ -13,7 +13,7 @@
 	<script src="../lib/sinon.js"></script>
 	<script src="../lib/sinon-qunit.js"></script>
 
-	<script>var require = {baseUrl: "../../WebContent/js"}</script>
+	<script>var require = {baseUrl: "../../WebContent"}</script>
 	<script src="../../WebContent/js/lib/require.js"></script>
 	<script src="../../WebContent/js/require.config.js"></script>
 	<script src="../require.config.js"></script>
