--- a/WebContent/example.html
+++ b/WebContent/example.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
+	<meta charset="utf-8">
 	<title>Backbone.js sandbox</title>
 	<link rel="stylesheet" href="css/example.css">
 	<script>var require = {baseUrl: "."}</script>
