refactoring use tmplItem() <- tmplClone()

--- a/WebContent/example.html
+++ b/WebContent/example.html
@@ -20,11 +20,9 @@
 	<ul id="navi">
 		<li><button id="clear">clear</button></li>
 	</ul>
-	<ol id="list1"></ol>
-
-	<div id="item-template" class="template">
-		<span class="text1"></span>
-	</div>
+	<ol id="list1">
+		<li><span class="text1"></span></li>
+	</ol>
 </div>
 
 </body>
